kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: backend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/backend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/backend: "true"

apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/frontend: "true"
        io.kompose.service: frontend
    spec:
      containers:
        - image: urlshortenerr.azurecr.io/images/docker-compose-frontend
          name: frontendd
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: frontend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/frontend: "true"
  podSelector:
    matchLabels:
      io.kompose.network/frontend: "true"

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 80
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: urlshortener-database
  name: urlshortener.database
spec:
  ports:
    - name: "5002"
      port: 5002
      targetPort: 5432
  selector:
    io.kompose.service: urlshortener-database
status:
  loadBalancer: {}

apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: urlshortener-database-claim0
  name: urlshortener-database-claim0
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 100Mi
status: {}


apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: urlshortener-database
  name: urlshortener-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: urlshortener-database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: urlshortener-database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: URLShortener
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: urlshortenerr.azurecr.io/images/postgres
          name: urlshortener.database
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: urlshortener-database-claim0
      restartPolicy: Always
      volumes:
        - name: urlshortener-database-claim0
          persistentVolumeClaim:
            claimName: urlshortener-database-claim0
status: {}


apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: urlshortener
  name: urlshortener
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: urlshortener
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.network/frontend: "true"
        io.kompose.service: urlshortener
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: URLShortener
            - name: POSTGRES_HOST
              value: urlshortener.database
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: urlshortenerr.azurecr.io/images/docker-compose-urlshortener
          name: urlshortener
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}

apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: urlshortener
  name: urlshortener
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 80
  selector:
    io.kompose.service: urlshortener
status:
  loadBalancer: {}
